--- a/ch5/Cargo.toml
+++ b/ch5/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "ch3"
+edition = '2018'
+name = "ch5"
 version = "0.1.0"
 authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
-edition = "2018"
 
 [dependencies]
+rand = "^0.5"
